--- a/P1/python.ipynb
+++ b/P1/python.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -49,7 +49,7 @@
       "True\n",
       "13\n",
       "[1, 2, 3, 5, 8, 13]\n",
-      "54321\n"
+      "nuossahidmah\n"
      ]
     }
    ],
@@ -172,7 +172,9 @@
     "\n",
     "\n",
     "def reverse_word_order(text:str)->str:\n",
-    "   return text[::-1]\n",
+    "    text =text.split(\" \")\n",
+    "    test= \"\".join(text)\n",
+    "    return test[::-1]\n",
     "\n",
     "#test \n",
     "\n",
@@ -185,7 +187,7 @@
     "print(is_prime(97))\n",
     "print(fibonacci(7))\n",
     "print(fibonacci_series(7))\n",
-    "print(reverse_word_order(\"12345\"))\n",
+    "print(reverse_word_order(\"Hello world\"))\n",
     "\n"
    ]
   },
