--- a/P3/TMDB1.ipynb
+++ b/P3/TMDB1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "8445fdfe-0add-4c56-9103-cc1e93cc55dd",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,12 +71,12 @@
    "source": [
     "# Fehlende Werte in den relevanten Spalten durch den Durchschnitt ersetzen\n",
     "# Fehlende Werte im Trainingsdatensatz auffüllen\n",
-    "train['budget'] = train['budget'].fillna(train['budget'].mean())\n",
+    "train['budget'] = train['budget'].fillna(0)\n",
     "train['popularity'] = train['popularity'].fillna(train['popularity'].mean())\n",
     "train['runtime'] = train['runtime'].fillna(train['runtime'].mean())\n",
     "\n",
     "# Fehlende Werte im Testdatensatz auffüllen\n",
-    "test['budget'] = test['budget'].fillna(test['budget'].mean())\n",
+    "test['budget'] = test['budget'].fillna(0)\n",
     "test['popularity'] = test['popularity'].fillna(test['popularity'].mean())\n",
     "test['runtime'] = test['runtime'].fillna(test['runtime'].mean())\n",
     "\n",
@@ -90,18 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0c400f96-3f6e-47ae-8954-e0e393f81ee6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE des Decision Tree Modells: 110947036.31303369\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Datenaufteilung in Trainings- und Validierungsdaten\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "49d96062-3997-4cec-b20c-76e2eec9beea",
    "metadata": {},
    "outputs": [
@@ -140,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "71552a48-3ac8-497f-9c91-8f874011d136",
    "metadata": {},
    "outputs": [
@@ -161,7 +153,7 @@
     "    'id': pd.read_csv('data/test.csv')['id'],\n",
     "    'revenue': test_predictions\n",
     "})\n",
-    "submission.to_csv('submission_decision_tree.csv', index=False)\n",
+    "submission.to_csv('submission_decision_tree3.csv', index=False)\n",
     "\n",
     "print(\"Submission-Datei wurde erstellt: submission_decision_tree.csv\")"
    ]
